--- a/index.html
+++ b/index.html
@@ -539,6 +539,7 @@
               Close
             </button>
             <button type="button" class="btn btn-primary">Submit</button>
+            <button type="button" class="btn btn-secondary">Submit</button>
           </div>
         </div>
       </div>
